package com.xinqihd.sns.gameserver.proto;
import "Gift.proto";

option java_outer_classname = "XinqiBsePromotion"; 

/**
* The promotion task data
*/
message Promotion {
  required string id = 1;
  optional string name = 2;
  optional string desc = 3;
  optional string target = 4;
  optional int32 step = 5;
  optional int32 total = 6;
  /**
  * True to display the input UI.
  */
  optional bool  input = 7;
  optional string inputkey = 8;
  repeated Gift  gifts = 9; 
  optional string giftdesc = 10;
  /**
  * 标识是否是新添加的一个活动
  * 0: nothing
  * 1: new
  * 2: taken
  * 3: timeout
  */
  optional int32  status = 11; 
  /**
  * 任务可能关联到相关的游戏功能
  * 上，用funcid表示准备激活的
  * 游戏界面.
	//寻宝 treasure,
	//祈福 pray,
	//充值 charge,
	//VIP vip,
	//背包 bag,
	//铁匠铺-强化 craftstrength,
    //铁匠铺-合成 craftforge,
    //铁匠铺-熔炼 craftcompose,
	//铁匠铺-转移 crafttransfer,
	//名人堂 toplist,
	//聊天 chat,
	//社交 social,
	//成就 achievement,
	//体力 action,
	//游戏设置 setting,
	//商城 shop,
	//完善信息 profile,
	//新浪微博 sinaweibo,
	//腾讯微薄 qqweibo,
	//人人 renren
  */
  optional string funcid = 20; 
  /**
   * 活动开始的日期和截止的日期，如果没有到开始日期
   * 客户端应该显示一个倒计时的天数，小时和秒数，
   * 超过截止日期显示已经截止
  */
  optional uint32 startsec = 21;
  optional uint32 endsec = 22;
  /**
   * 服务器计算出来的领取时间点，超过时间范围
   * 不可领取。如果当前时间未达到takeStartMillis,
   * 客户端可以显示：小时：分钟 的倒计时.
   * 值为0表示不判断
   */
  optional uint32 takestartsec = 23;
  optional uint32 takeendsec = 24;

}

message BsePromotion {
  /**
  * isnew 为 true，任务图标
  * 任务需要呈现闪烁状态
  */
  optional bool isnew = 1;
  repeated Promotion promotion = 2;
}
