//package wanyou.game.protocol;
//请求初始化信息
message BceInit {
}
